# scribe

./: Cargo.toml
src/: main.rs  node.rs  source.rs
src/source/: file_source.rs
