[package]
name = "scribe"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pulldown-cmark = { version = "0.8", default-features = false, features = ["simd"]}
handlebars = "4.1"
serde = { version = "1.0", features = ["derive"] }